--- a/index.html
+++ b/index.html
@@ -4,9 +4,114 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <div>Hello</div>
+    <header>
+        <p>Best Beers</p>
+        <span class="material-icons">
+            menu
+        </span>
+    </header>
+    <main>
+        <div class="container">
+            <div class="card">
+                <div class="number">1</div>
+                <div class="textcontainer">
+                    <div class="title">Mango Bay</div>
+                    <div class="sub">Mad Scientist Beer</div>
+                    <div class="text">Pale Ale - American</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">2</div>
+                <div class="textcontainer">
+                    <div class="title">Távoli Galaxis</div>
+                    <div class="sub">Rothbeer Brewery</div>
+                    <div class="text">IPA - American</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">3</div>
+                <div class="textcontainer">
+                    <div class="title">Flying Rabbit</div>
+                    <div class="sub">MONYO Brewing Co.</div>
+                    <div class="text">IPA - American</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">4</div>
+                <div class="textcontainer">
+                    <div class="title">Liquid Cocaine</div>
+                    <div class="sub">Mad Scientist Beer</div>
+                    <div class="text">IPA - Imperial</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">5</div>
+                <div class="textcontainer">
+                    <div class="title">Organic Chocolate Stout</div>
+                    <div class="sub">Samuel Smith Old Brewery</div>
+                    <div class="text">Stout - English</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">6</div>
+                <div class="textcontainer">
+                    <div class="title">Bracia</div>
+                    <div class="sub">Thornbridge Brewery</div>
+                    <div class="text">Strong Ale - English</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">7</div>
+                <div class="textcontainer">
+                    <div class="title">Oatmeal Stout</div>
+                    <div class="sub">Samuel Smith Old Brewery</div>
+                    <div class="text">Stout - Oatmeal</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">8</div>
+                <div class="textcontainer">
+                    <div class="title">Black Tokio Horizon</div>
+                    <div class="sub">BrewDog</div>
+                    <div class="text">Stout - American Imperial</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">9</div>
+                <div class="textcontainer">
+                    <div class="title">Vintage Ale</div>
+                    <div class="sub">Fuller's</div>
+                    <div class="text">Old Ale</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+            <div class="card">
+                <div class="number">10</div>
+                <div class="textcontainer">
+                    <div class="title">All the Leaves are Brown</div>
+                    <div class="sub">Tempest Brewing Company</div>
+                    <div class="text">Brown Ales - American</div>
+                </div>
+                <button>details <i class="material-icons md-36">arrow_forward</i></button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
